--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/native-stack": "^7.8.6",
+    "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
     "expo": "~54.0.29",
     "expo-status-bar": "~3.0.9",
@@ -21,7 +22,8 @@
     "react-native": "0.81.5",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-redux": "^9.2.0"
   },
   "private": true
 }
