--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.2",
     "expo": "~54.0.29",
     "expo-status-bar": "~3.0.9",
+    "jwt-decode": "^4.0.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-dropdown-picker": "^5.4.6",
