--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~54.0.29",
     "expo-status-bar": "~3.0.9",
     "jwt-decode": "^4.0.0",
+    "lottie-react-native": "^7.3.5",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-dropdown-picker": "^5.4.6",
